--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ kotlinxSerializationJson = "1.10.0-RC"
 ktor = "3.3.3"
 mvvmCore = "0.16.1"
 coil = "3.3.0"
+mediaPlayer = "1.0.26"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -42,6 +43,8 @@ ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "kto
 mvvm-core = { module = "dev.icerock.moko:mvvm-core", version.ref = "mvvmCore" }
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
 coil-network-ktor = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "coil" }
+# coil-gif removed
+compose-media-player = { module = "network.chaintech:compose-multiplatform-media-player", version.ref = "mediaPlayer" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
